<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:title="@string/menu_map"
        android:icon="@drawable/ic_map_white_24dp"/>
    <item
        android:id="@+id/action_events"
        android:enabled="true"
        android:title="@string/menu_events"
        android:icon="@drawable/ic_event_note_white_24dp"/>
    <item
        android:id="@+id/action_friends"
        android:enabled="true"
        android:title="@string/menu_friends"
        android:icon="@drawable/ic_people_white_24dp"/>
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:title="@string/menu_profile"
        android:icon="@drawable/ic_account_circle_white_24dp"/>
</menu>