<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/fragment_dialog_background">

    <LinearLayout
        android:id="@+id/dialog_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:focusable="true"
        android:minWidth="280dp"
        android:minHeight="400dp"
        android:background="@drawable/dialog_bg_rounded_corner_white"
        android:padding="@dimen/activity_horizontal_margin"
        >

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/font_title"
            android:textColor="@color/black"
            android:text="@string/add_new_activity"
            />

        <EditText
            android:id="@+id/input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="textCapWords"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:padding="@dimen/margin_small"
            android:maxLines="1"
            android:background="@drawable/edittext_bg_rounded_corner_white"
            />

        <EditText
            android:id="@+id/input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textCapSentences|textMultiLine"
            android:layout_marginTop="@dimen/margin_small"
            android:padding="@dimen/margin_small"
            android:minLines="3"
            android:gravity="top|start"
            android:background="@drawable/edittext_bg_rounded_corner_white"
            />

        <EditText
            android:id="@+id/input_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:inputType="textCapWords"
            android:layout_marginTop="@dimen/margin_small"
            android:padding="@dimen/margin_small"
            android:maxLines="1"
            android:background="@drawable/edittext_bg_rounded_corner_white"
            />

        <RelativeLayout
            android:id="@+id/layout_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            >

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="10:00 am"
                android:textSize="@dimen/font_avatar"
                android:layout_centerInParent="true"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/time"
                android:layout_alignBottom="@+id/time"
                android:padding="@dimen/margin_small"
                android:text="@string/edit"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg_with_state"
            android:text="@string/save"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/dialog_content"
        android:layout_alignStart="@+id/dialog_content"
        android:layout_alignEnd="@+id/dialog_content"
        android:layout_alignBottom="@+id/dialog_content"
        android:clickable="true"
        android:focusable="true"
        android:background="@color/white"
        android:visibility="gone"
        >

        <Button
            android:id="@+id/btn_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/margin_small"
            android:background="@drawable/btn_bg_with_state"
            android:text="@string/set"
            android:textColor="@color/white"
            />
    </TimePicker>
</RelativeLayout>
